# ChemDM

./: .gitignore  README.md  TrajectoryDataset.py  diffusion.py  pyproject.toml  scoreNetwork.py
data/: formatData.py
docs/: ddpm_notes.aux  ddpm_notes.tex
examples/: MullerBrown.py  plotNEB.py
examples/AlanineDipeptideGNN/: TrajectoryDataset.py  check_forward_diffusion.py  computeNEBFromReps.py  compute_fec_clusters.py  endpoint_selection.py  fec.py  run_md.py  system.py  test.py  test_diffusion.py  train.py  train_diffusion.py  train_film.py
examples/Butane/: Butane.py  EquivariantNetwork.py  TrajectoryDataset.py  generateTrainingData.py  test_regressor.py  train_regressor.py
examples/ButaneGNN/: TrajectoryDataset.py  test.py  train.py
examples/MullerBrown/: MullerBrown.py  generateTrainingData.py  plotNEB.py  testForwardDiffusion.py  test_diffusion.py  test_regressor.py  train_adam.py  train_diffusion.py  train_regressor.py
examples/rdkit/: conformerFromSMILES.py  conformerViewer.py  stabilizeConformer.py
examples/transition1x/: train.py  transition1x  transition1x.job
examples/transition1x_diffusion/: check_forward_diffusion.py  train.py
examples/transition1x_e3nn/: train.py
examples/transition1x_newton/: determineDiffusionParameters.py  loadDiffusionModel.py  loadNewtonModel.py  test.py  test_diffusion.py  train.py  train_diffusion.py
examples/xtb/: Logger.py  analyzeAllRelaxations.py  loadModels.py  neb.py  reactionstudio.py  (+8 more)
tests/: testAllNeighbors.py  testBatchedMolecule.py  testDistanceNeighbors.py  testMolecularEmbeddingNetwork.py
(+95 files in other folders)
